tests/snapshots/project_compilation_emits_deterministic_module_layout__module-2.snap
---
source: tests/project_compilation_emits_deterministic_module_layout.rs
expression: generated_luau
---
--!strict

local function main(): ()
    print("ready")
end

main()
