tests/snapshots/project_compilation_emits_deterministic_module_layout__module-4.snap
---
source: tests/project_compilation_emits_deterministic_module_layout.rs
expression: generated_luau
---
--!strict

local function double(value: number): number
    return value * 2
end

return {
}
